- Added Field to store the id of the user who has won the bid - SecurityConfig now reads some common config from a shared gigtasker-common project

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.gigtasker</groupId>
+            <artifactId>gigtasker-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
