--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
             <version>2.8.14</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>5.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>com.gigtasker</groupId>
             <artifactId>gigtasker-common</artifactId>
